<resources>
    <string name="app_name">Countries Of The World</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explore">Explore</string>
    <string name="search_country">Search Country</string>
    <string name="en">EN</string>
    <string name="filter">Filter</string>
    <string name="andorra">Andorra</string>
    <string name="full_stop">.</string>
    <string name="language">Language</string>
    <string name="lang1">Bahasa</string>
    <string name="lang2">Deutsch</string>
    <string name="lang3">English</string>
    <string name="lang4">Español</string>
    <string name="lang5">Française</string>
    <string name="lang6">Italiano</string>
    <string name="lang7">Português</string>
    <string name="lang8">Pу́сский</string>
    <string name="lang9">Svenska</string>
    <string name="lang10">Türkçe</string>
    <string name="lang11">普通话</string>
    <string name="lang12">بالعربية</string>
    <string name="lang13">বাঙ্গালী</string>
    <string name="clearbutton">clearButton</string>
    <string name="population">Population: %d</string>
    <string name="region">Region: %s</string>
    <string name="sub_region">Sub Region: %s</string>
    <string name="area">Area: %f</string>
    <string name="independence">Independence: %b</string>
    <string name="continent">Continent: %s</string>
    <string name="start_of_the_week">Start Of The Week: %s</string>
    <string name="driving_side">Driving side: %s</string>
    <string name="time_zone">Time zone: %s</string>
    <string name="un_member">UnMember: %b</string>
    <string name="status">Status: %s</string>
    <string name="land_locked">Land locked: %b</string>
    <string name="fifa">Fifa: %s</string>
    <string name="borders">Borders: %s</string>
    <string name="message">Request Failed</string>

</resources>