<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CountriesFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="20dp"
        android:background="@color/gray_200"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_light"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:id="@+id/countrySearchView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:iconifiedByDefault="false"
        android:queryBackground="@android:color/transparent"
        android:queryHint="@string/search_country"
        android:fontFamily="@font/axiforma_regular"
        android:background="@drawable/background_text_field"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/languageButton"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/axiforma_regular"
        android:drawableLeft="@drawable/ic_geography"
        android:text="@string/en"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:cornerRadius="4dp"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/countrySearchView"
        app:strokeColor="#A9B8D5"
        app:strokeWidth="1dp"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/filterButton"
        android:layout_width="98dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/axiforma_regular"
        android:drawableLeft="@drawable/ic_filter"
        android:text="@string/filter"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:cornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintTop_toBottomOf="@id/countrySearchView"
        app:strokeColor="#A9B8D5"
        app:strokeWidth="1dp"
        tools:ignore="TextContrastCheck" />

    <View
        android:id="@+id/viewBottom"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/languageButton" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        tools:listitem="@layout/country_list_items"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewBottom" />


</androidx.constraintlayout.widget.ConstraintLayout>